[REPORT] Added collaboration part

--- a/report/13-template.tex
+++ b/report/13-template.tex
@@ -552,6 +552,16 @@ In autonomia mi sono occupato di:
 \item Le implemtazioni delle collisioni (BaseCollisionComponent e ProjectileCollisionComponent in t2sgame.game.ecs.impl, Circle e Rectangle in t2sgame.common.shapes)
 \item Uno stopwatch per la gestione del tempo trascorso (StopWatch in t2sgame.common)
 \end{itemize}
+In collaborazione con Luca Oskari Fiumanò:
+\begin{itemize}
+	\item EntityFactory (t2sgame.game.model.impl)
+\end{itemize}
+In collaborazione con Andrea Cecchini:
+\begin{itemize}
+	\item Gestione delle collisioni (CollisionComponent in t2sgame.game.ecs.impl, Shape in t2sgame.common)
+	\item Gestione dei componenti.
+	\item Gestione della messagistica.
+\end{itemize}
 
 \section{Note di sviluppo}
 \subsection*{Cecchini Andrea}
@@ -606,11 +616,13 @@ Utilizzata per realizzare la parte di View
 \end{itemize}
 
 \subsection*{Leonardo David Matteo Magnani}
+\subsubsection*{Utilizzo di stream, optional, method reference e metodo generico}
 \begin{itemize}
-	\item Utilizzo di stream, optional, method reference e metodo generico  \\
-	Permalink: \url{https://github.com/nicolodaddabbo/OOP22-t2s-game/blob/48fe160af0c4cdbfbf7fe791b784f6f4ad7b185e/src/main/java/it/unibo/t2sgame/game/ecs/impl/EntityImpl.java#L46-L51}
-	\item Utilizzo di stream, optional, lambda e metodo generico \\
-	Permalink: \url{https://github.com/nicolodaddabbo/OOP22-t2s-game/blob/48fe160af0c4cdbfbf7fe791b784f6f4ad7b185e/src/main/java/it/unibo/t2sgame/game/ecs/impl/EntityImpl.java#L69-L71}
+	\item Permalink: \url{https://github.com/nicolodaddabbo/OOP22-t2s-game/blob/48fe160af0c4cdbfbf7fe791b784f6f4ad7b185e/src/main/java/it/unibo/t2sgame/game/ecs/impl/EntityImpl.java#L46-L51}
+\end{itemize}
+\subsubsection*{Utilizzo di stream, optional, lambda e metodo generico}
+\begin{itemize}
+	\item Permalink: \url{https://github.com/nicolodaddabbo/OOP22-t2s-game/blob/48fe160af0c4cdbfbf7fe791b784f6f4ad7b185e/src/main/java/it/unibo/t2sgame/game/ecs/impl/EntityImpl.java#L69-L71}
 \end{itemize}
 
 \chapter{Commenti finali}
